package com.hvpaiva.abstractfactory;

/**
 * Interface de Decoração.
 */
public interface Decoracao {

	/**
	 * @return Retorna a descrição
	 */
	String descricao();

}
