package com.hvpaiva.abstractfactory;

/**
 * Interface de Música.
 */
public interface Musica {

	/**
	 * @return Retorna a descrição
	 */
	String descricao();

}
