package com.hvpaiva.abstractfactory;

/**
 * Interface de Prato.
 */
public interface Prato {

	/**
	 * @return Retorna a descrição
	 */
	String descricao();

}
